Fixed z-index issue in Header Component

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -5,9 +5,9 @@ nav {
   background: $black-1;
   height: 64px;
   position: sticky;
-  // position: fixed;
-  // top: 0px;
-  // z-index: 100 !important;
+  position: fixed;
+  top: 0px;
+  z-index: 100 !important;
   .logo {
     background: #bd2c49;
     display: block;
